1.0.2: 2021 TBD

* added ofxTF2::setMaxGPUMemory()
* added ofxTF2::setContextOptionsConfig()

* fixed ofxTF2::getTensorShape()
* updated cppflow as cppflow2 is now the main branch, make sure to update the
  local submodule with:
      git submodule deinit libs/cppflow/
      git submodule update --init --recursive

* updated README.md information on training with Python and TF2
* updated download scripts

1.0.1: 2021 Feb 19

* fixed bad cast in ofxTF2::vectorToTensor()
* fixed issue with setenv() declaration and sys/error.h include on Windows
* fixed libtensorflow download script not handling Windows build zip files

* added changelog

* updated addon_config.mk tags and url

1.0.0: 2021 Feb 09

initial version